# case-analysis

./: CHANGELOG.md  Makefile  README.md  case-analysis.cabal  hie.yaml
.github/workflows/: main.yaml
src/Control/: Case.hs
test/spec/Control/: CaseSpec.hs
