cabal-version: 2.2

name: case-analysis
version: 0.1.0.0
synopsis: 
description: 
homepage: https://github.com/kakkun61/case-analysis
bug-reports: https://github.com/kakkun61/case-analysis/issues
license: Apache-2.0
license-file: LICENSE
author: Kazuki Okamoto (岡本和樹)
maintainer: kazuki.okamoto@kakkun61.com
copyright: 2021 Kazuki Okamoto (岡本和樹)
category: Data
build-type: Simple
tested-with: GHC == 8.6.5, GHC == 8.8.4, GHC == 8.10.3
extra-source-files: README.md,
                    CHANGELOG.md

common common
  build-depends: base >= 4 && < 5
  ghc-options: -Wall
               -Wcompat
  default-language: Haskell2010

library
  import: common
  hs-source-dirs: src
  exposed-modules: Control.Case
  build-depends: generics-sop
  ghc-options: -Wincomplete-uni-patterns
               -Wincomplete-record-updates
               -Wmonomorphism-restriction
               -Wmissing-exported-signatures
               -Wmissing-export-lists
               -Wmissing-home-modules
               -Wmissing-import-lists
               -Widentities
               -Wredundant-constraints
               -Wpartial-fields
               -Wno-name-shadowing

test-suite doctest
  import: common
  type: exitcode-stdio-1.0
  main-is: main.hs
  hs-source-dirs: test/doctest
  build-depends: case-analysis,
                 doctest,
                 generics-sop
  ghc-options: -threaded
               -rtsopts
               -with-rtsopts=-N
  build-tool-depends: doctest-discover:doctest-discover

test-suite spec
  import: common
  type: exitcode-stdio-1.0
  main-is: Spec.hs
  hs-source-dirs: test/spec
  other-modules: Control.CaseSpec
  build-depends: case-analysis,
                 hspec
  ghc-options: -threaded
               -rtsopts
               -with-rtsopts=-N
  build-tool-depends: hspec-discover:hspec-discover
